--- a/package.json
+++ b/package.json
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.3",
+    "@tailwindcss/forms": "^0.5.9",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.1",
+    "mysql2": "^3.11.4",
+    "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "drizzle-kit": "^0.28.0",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
