--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.9",
+    "@apollo/server": "^4.11.2",
     "@auth/drizzle-adapter": "^1.7.3",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
+    "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
+    "graphql-tag": "^2.12.6",
     "mysql2": "^3.11.4",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
@@ -24,7 +32,9 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "reflect-metadata": "^0.2.2",
     "tsx": "^4.19.2",
+    "type-graphql": "^2.0.0-rc.2",
     "typescript": "^5.6.3",
     "uuid": "^11.0.2"
   },
