--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@apollo/server": "^4.11.2",
     "@auth/drizzle-adapter": "^1.7.3",
     "@tailwindcss/forms": "^0.5.9",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
@@ -35,16 +33,18 @@
     "reflect-metadata": "^0.2.2",
     "tsx": "^4.19.2",
     "type-graphql": "^2.0.0-rc.2",
-    "typescript": "^5.6.3",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
     "drizzle-kit": "^0.28.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.6.3"
   },
   "overrides": {
     "react": "$react",
