Conversations route now shows messages (styled in the UI as well). GraphQL sendMessage() resover created and working.  Cloudinary setup to upload photos as a message.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.11.4",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
+    "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1",
