--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.11.9",
     "@apollo/server": "^4.11.2",
     "@auth/drizzle-adapter": "^1.7.3",
+    "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
