--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.9",
     "@apollo/server": "^4.11.2",
+    "@as-integrations/next": "^3.2.0",
     "@auth/drizzle-adapter": "^1.7.3",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
