--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.3",
     "reflect-metadata": "^0.2.2",
     "tsx": "^4.19.2",
     "type-graphql": "^2.0.0-rc.2",
