--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.1",
+    "express": "^4.21.1",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "graphql-tag": "^2.12.6",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.3",
+    "react-spinners": "^0.14.1",
     "reflect-metadata": "^0.2.2",
     "tsx": "^4.19.2",
     "type-graphql": "^2.0.0-rc.2",
