--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@auth/drizzle-adapter": "^1.7.3",
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "aws-appsync-auth-link": "^3.0.7",
+    "aws-appsync-subscription-link": "^3.1.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
